fix Writer table functions printed wrongly

This patch fixes fdo#58074: Writer table functions are not calculated
before printing.

Change-Id: Idd3a634f1e8a1f97e4ee8359a11da9793f9ac307